--- a/platformio_override.ini
+++ b/platformio_override.ini
@@ -19,7 +19,8 @@ lib_deps = ${esp32.lib_deps}
 monitor_filters = esp32_exception_decoder
 board_build.partitions = ${esp32.default_partitions}
 
-   -D USERMOD_ANIMATED_STAIRCASE
+   #-D USERMOD_ANIMATED_STAIRCASE
+   -D USERMOD_WORDCLOCK
 
 #----------
 # SAMPLE
