--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: WLED Build
 
 # Only included into other workflows
 on:
-  workflow_call:
+  #workflow_call:
+  workflow_dispatch:
   
 jobs:
 
